--- a/src/Create.scss
+++ b/src/Create.scss
@@ -10,18 +10,17 @@
 .page-header {
   background-color: #ffffff;
   border-bottom: 1px solid $border-subtle;
-  margin-bottom: $spacing-07; // 32px
+  margin-bottom: 0;
 
   .page-header-content {
     max-width: 1584px;
     margin: 0 auto;
-    padding: 0 1rem 0 0;
-    padding-left: 0;
+    padding: $spacing-09 0 $spacing-06;
   }
 }
 
 .create-header {
-  padding: $spacing-06 0 $spacing-07;
+  padding: 0;
 
   .cds--btn--ghost {
     margin-bottom: $spacing-05;
@@ -51,10 +50,8 @@
 }
 
 .page-content {
-  max-width: 1584px;
-  margin: 0 auto;
-  padding: $spacing-09 1rem $spacing-06 0;
-  padding-left: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .create-form {
